--- a/static/index.css
+++ b/static/index.css
@@ -1,6 +1,6 @@
 body {
-    background-color: #0d1117;
-    color: #c9d1d9;
+    background-color: #363434;
+    color: #e8c4b8;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
     line-height: 1.5;
     margin: 0;
