--- a/static/index.css
+++ b/static/index.css
@@ -1,6 +1,6 @@
 body {
-    background-color: #363434;
-    color: #e8c4b8;
+    background-color: #1c1b1d;
+    color: #f2efed;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
     line-height: 1.5;
     margin: 0;
@@ -20,7 +20,7 @@ h3,
 h4,
 h5,
 h6 {
-    color: #58a6ff;
+    color: #deaf9d;
     margin-top: 24px;
     margin-bottom: 16px;
 }
